project/application/static/css/site.css
body {
    width: 100%;
    margin: 0;
    background-color: #fafafa;
}

#rh-subnav {
    display: none;
}

article div {
    text-align: center;
}

h1, h2, h3, h4 {
    font-family: 'Open Sans Condensed', sans-serif;
    font-weight: bold;
}

h1 {
    font-size: 40px;
    text-transform: uppercase;
    color: #333;
    text-align: center;
}

h2#timer-text, h2#yes-no {
    font-size: 250px;
    letter-spacing: -15px;
    color: #C70039;
    margin: -50px auto;
    text-align: center;
}

h2#timer-text + p, h2#yes-no + p, h2 {
    font-family: 'Open Sans Condensed', sans-serif;
    font-weight: bold;
    font-size: 31px;
    letter-spacing: 1px;
    color: #333;
    margin: auto;
    max-width: 800px;
    text-transform: uppercase;
    text-align: center;
}

article p {
    text-align: center;
    max-width: 800px;
    margin: auto;
    font-family: 'PT Serif', serif;
    font-size: 24px;
    line-height: 30px;
}

article li {
    font-size: 18px;
    line-height: 22px;
    margin-bottom: 10px;
    font-family: "PT Serif", serif;
}

.circle-yellow {
    width: 36px;
    height: 36px;
    background: #fccc0a;
    -moz-border-radius: 18px;
    -webkit-border-radius: 18px;
    border-radius: 18px;
    font: bold 25px 'Open Sans Condensed', sans-serif;
}

hr {
    height: 12px;
    margin: 20px 70px;
    border: 0;
    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
}

.recent {
    width: 300px;
    margin: auto;
}
#news {
    width: 600px;
    max-width: 600px;
}

article dl {
    width: 100%;
    overflow: hidden;
    padding: 0;
    margin: 0;
}

article dt {
    clear: both;
    float: left;
    height: 50px;
}
article dt img {
    width: 40px;
    height: 40px;
}

article dd {
    font: normal 20px 'Open Sans', sans-serif;
    padding: 5px;
    height: 50px;
    float: left;
}

#lead dl {
    margin: auto;
    max-width: 800px;
    overflow: visible;
}
#lead dl dd {
    float: none;
}

.ad {
    margin-bottom: 5px;
}
.center {
    margin: auto;
    text-align: center;
}
div.center > span {
    font-size:10px;
    color:#999;
    font-family:sans-serif;
}

/* HANDHELD-SPECIFIC */
@media only screen and ( min-width: 220px ) and ( max-width:727px ) {
#news {
    max-width: 100%;
    width: 100%;
    margin: 0 30px;
}
/* TABLET-SPECIFIC */
@media only screen and ( min-width: 728px ) and (max-width:1023px) {
}
/* HANDHELD & TABLET */
@media only screen and ( min-width: 220px ) and (max-width:1023px) {
h1 {
    font-size: 30px;
    line-height: 25px;
}
h2#timer-text, h2#yes-no {
    margin: -60px auto;
}
#lead p {
    margin: auto 10px;
}
}

/* IE10+ CSS styles go here */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
}

